{FIX} Overflow x issue

--- a/src/components/Home/HeroSection/styles.module.scss
+++ b/src/components/Home/HeroSection/styles.module.scss
@@ -15,7 +15,7 @@
 
 .videoContainer {
   position: absolute;
-  width: 100vw;
+  width: 100%;
   height: 100%;
 
   z-index: 0;
@@ -24,7 +24,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     transform: translate(-50%, -50%);
     pointer-events: none;
